--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "signalk-switchlogic",
+  "name": "switchlogic",
   "version": "1.0.0",
-  "description": "Apply binary logic over switch and notification states.",
+  "description": "Apply binary logic over Signal K switch and notification states.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/preeve9534/signalk-switchlogic.git"
+    "url": "git+https://github.com/preeve9534/switchlogic.git"
   },
   "keywords": [
     "signalk-node-server-plugin",
     "signalk",
-    "switchlogic",
+    "switch",
+    "notification",
+    "logic",
     "plugin"
   ],
   "author": "Paul Reeve <preeve@pdjr.eu>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/preeve9534/signalk-switchlogic/issues"
+    "url": "https://github.com/preeve9534/switchlogic/issues"
   },
-  "homepage": "https://github.com/preeve9534/signalk-switchlogic#readme",
+  "homepage": "https://github.com/preeve9534/switchlogic#readme",
   "dependencies": {
     "baconjs": "^1.0.1",
     "sprintf-js": "^1.1.2",
