--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "switchlogic",
+  "name": "signalk-switchlogic",
   "version": "1.0.0",
   "description": "Apply binary logic over Signal K switch and notification states.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/preeve9534/switchlogic.git"
+    "url": "git+https://github.com/preeve9534/signalk-switchlogic.git"
   },
   "keywords": [
     "signalk-node-server-plugin",
@@ -21,9 +21,9 @@
   "author": "Paul Reeve <preeve@pdjr.eu>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/preeve9534/switchlogic/issues"
+    "url": "https://github.com/preeve9534/signalk-switchlogic/issues"
   },
-  "homepage": "https://github.com/preeve9534/switchlogic#readme",
+  "homepage": "https://github.com/preeve9534/signalk-switchlogic#readme",
   "dependencies": {
     "baconjs": "^1.0.1",
     "sprintf-js": "^1.1.2",
