--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "baconjs": "^1.0.1",
     "sprintf-js": "^1.1.2",
     "sprintf.js": "^0.1.4"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
