--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lib/signalk-liblog"]
 	path = lib/signalk-liblog
 	url = https://github.com/pdjr-signalk/signalk-liblog
-[submodule "lib/signalk-libnotification"]
-	path = lib/signalk-libnotification
-	url = https://github.com/pdjr-signalk/signalk-libnotification
+[submodule "lib/signalk-libdelta"]
+	path = lib/signalk-libdelta
+	url = https://github.com/pdjr-signalk/signalk-libdelta
