--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pdjr-skplugin-switchlogic",
-  "version": "1.0.0",
+  "version": "2.1.0",
   "description": "Apply binary logic over Signal K switch and notification states.",
   "main": "index.js",
   "signalk-plugin-enabled-by-default": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,7 @@
   "homepage": "https://github.com/pdjr-signalk/pdjr-skplugin-switchlogic#readme",
   "dependencies": {
     "baconjs": "^1.0.1",
-    "sprintf-js": "^1.1.2",
-    "sprintf.js": "^0.1.4"
+    "sprintf-js": "^1.1.2"
   },
   "directories": {
     "lib": "lib"
