--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/signalk-libdelta"]
 	path = lib/signalk-libdelta
 	url = https://github.com/pdjr-signalk/signalk-libdelta
+[submodule "lib/signalk-libapp"]
+	path = lib/signalk-libapp
+	url = https://github.com/pdjr-signalk/signalk-libapp
