--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/signalk-liblog"]
 	path = lib/signalk-liblog
 	url = https://github.com/pdjr-signalk/signalk-liblog
+[submodule "lib/signalk-libapp"]
+	path = lib/signalk-libapp
+	url = https://github.com/pdjr-signalk/signalk-libapp
