--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/pdjr-signalk/pdjr-skplugin-switchlogic#readme",
   "dependencies": {
     "baconjs": "^1.0.1",
+    "lodash": "^4.17.21",
     "sprintf-js": "^1.1.2"
   },
   "directories": {
