--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "baconjs": "^1.0.1",
     "lodash": "^4.17.21",
     "signalk-libapp": "github:pdjr-signalk/signalk-libapp",
-    "signalk-liblog": "github:pdjr-signalk/signalk-liblog",
+    "signalk-liblog": "github:pdjr-signalk/signalk-liblog"
   },
   "directories": {
     "lib": "lib"
