--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "types": "dist/index.d.ts",
   "signalk-plugin-enabled-by-default": true,
   "scripts": {
-    "publish": "yq -o=json -I=2 resources/openApi.yaml > resources/openApi.json",
-    "test": "echo \"Error: no test specified\"",
-    "build": "tsc",
-    "prepare": "tsc",
+    "clean": "rm -rf node_modules package-lock.json *.tgz",
+    "make": "npm install && tsc",
     "pack": "npm pack"
   },
   "repository": {
