--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "baconjs": "^3.0.19"
   },
   "devDependencies": {
-    "@types/node": "^22.5.4"
+    "@types/node": "^22.5.4",
+    "typescript": "^5.7.2"
   }
 }
